tests/syntax_error/match_underscore_not_last.jou
enum Foo:
    One
    Two
    Three

def blah() -> None:
    match Foo.One:
        case Foo.One:
            pass
        case _:
            pass
        case Foo.Two:  # Error: this case will never run, becase 'case _:' above matches anything
            pass
